# misalign

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_version.py
